# Second-Hand-Market-Trends-System-for-Digital-Hardware

./: .env.example  .gitignore  README.md  description.md  setup.sh
backend/: BACKEND_README.md  Debug_Manual.md  README.md  alembic.ini  debug_crawler.py  pyproject.toml  rerun_one_hardware.py  reset_backend_data.py  revalidate.py  test_crawl.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_hardware.py  0003_extend_snapshots.py  0004_add_composite_index.py  0005_add_llm_validation.py  0006_drop_search_keywords.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  crawler.py  hardware.py  validator.py
backend/app/core/: config.py  database.py  hardware_pool.py
backend/app/crawler/: __init__.py  xianyu.py
backend/app/models/: __init__.py  hardware.py  price.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: hardware.py
backend/app/services/: __init__.py  crawler_service.py  llm_validator.py  stats.py
frontend/: index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.vue  App.vue.js  main.js
frontend/src/api/: index.js  index.ts  types.ts
frontend/src/components/: HardwareCard.vue  HardwareCard.vue.js  MiniTrendSparkline.vue  MiniTrendSparkline.vue.js  PriceTrendChart.vue  PriceTrendChart.vue.js
frontend/src/router/: index.js  index.ts
frontend/src/views/: HardwareDetailView.vue  HardwareDetailView.vue.js  HomeView.vue  HomeView.vue.js
